--- a/styles.html
+++ b/styles.html
@@ -25,6 +25,10 @@ body {
   text-align: center;
 }
 
+.profile .name {
+  font-size: 22px;
+}
+
 .profile .email {
   font-size: 12px;
   opacity: 1;
