--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<li class='project_view'>
 						<a href='#'><em class="fa fa-book" aria-hidden="true">&nbsp;</em> Projects</a>
 					</li>
-					<li class='settings_view'>
+					<li id='settings_view'>
 						<a href='#'><em class="fa fa-cogs" aria-hidden="true">&nbsp;</em> Settings</a>
 					</li>
 				</ul>
@@ -642,83 +642,42 @@
 
 		</script>      
 
-		<script type='text/template' id='projects-template'>
+		<script type='text/template' id='settings-view-template'>
 
 			<div id='main' class='col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2'>
 				<div class='row'>
 					<div class='col-lg-12'>
-						<h1 class='page-header'>Projects</h1>
+						<h1 class='page-header'>Settings</h1>
 					</div>
 				</div>
 				<div class='row'>
 					<div class='col-md-12'>
-						<div class=' panel panel-info'>
+						<div class='panel panel-info'>
 							<div class='panel-heading'>
-								Project Management
+								Settings
 							</div>
 							<div class='panel-body'>
-								<div class='projects-sidebar col-md-2'>
-									<ul class='projects-nav'>
-									</ul>
-								</div>
-								<div class='project-dashboard col-md-10'>
-
-								</div>
+								
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>      
+			</div>  			
 
 		</script>
 
-		<script type='text/template' id='task-view-template'>
+		<script type='text/template' id='user-view-template'>
 
-			<input type='checkbox' /> <%- title %>
-			<div class='information'><b>Due:</b> <%- moment(dueDate).format("dddd, MMM Do YYYY") %> | <b>Assigned by:</b> <%- assign_name %></div>
-
-		</script>
-
-		<script type='text/template' id='project-dashboard-view-template'>
-
-			<h1><%- title %></h1><br />
-			<h4>Owned by <b><%- owner %></b></h4>
-			<h5><%- description %></h5><br />
-			<button class='btn btn-primary' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button>
-			<br /><hr />
 			<div class='row'>
-				<div class='col-md-6'>
-					<div class='panel panel-info'>
-						<div class='panel-heading'>
-							Calendar
-						</div>
-						<div class='panel-body'>
-							<div id='project-calendar'></div>
-						</div>
-					</div>
+				<div class='col-md-4'>
+					User: <b><%- username %></b>
 				</div>
-				<div class='col-md-6'>
-					<div class='panel panel-info'>
-						<div class='panel-heading'>
-							Progress
-						</div>
-						<div class='panel-body'>
-							<div id='chart'></div>
-						</div>
-					</div>
+				<div class='col-md-4'>
+					Email: <b><%- email %></b>
 				</div>
 			</div>
-			<div class='row'>
-				<div class='col-md-12'>
-					<div class='panel panel-info'>
-						<div class='panel-heading'>
-							Tasks
-						</div>
-						<div class='panel-body task-pane'>
-						</div>
-					</div>
-				</div>
-			</div>			
+			<hr />
+			<button class='btn btn-primary change-password'>Change Password</button>
 
 		</script>
 
@@ -736,7 +695,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.5.1/fullcalendar.min.js"></script>
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type='text/javascript' src='https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js'></script>
+   		<script type='text/javascript' src='https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js'></script>
 
 		
 		<!-- Custom Scripts -->
@@ -748,6 +707,8 @@
 			var User;
 			
 		</script>
+
+		<?!= include('encryption'); ?>
 		
 		<?!= include('models'); ?>
 		<?!= include('collections'); ?>
